# VulkanLearning

./: .gitignore  .gitmodules  CMakeLists.txt  HelloTriangle.cpp  HelloTriangle.hpp  README.md  main.cpp
include/: StandardUtils.hpp
include/VulkanUtilities/: BufferUtils.hpp  DebugUtils.hpp  ExtensionUtils.hpp  ShaderUtils.hpp
res/: HelloTriangleVS.vert  compile.bat  vert.spv
src/: HelloTriangle.cpp  HelloTriangle.hpp  OriginalScrawls.txt  StandardUtils.cpp  main.cpp
src/VulkanUtilities/: BufferUtils.cpp  DebugUtils.cpp  ExtensionUtils.cpp  ShaderUtils.cpp
